@@ -1,3 +1,13 @@
+2006-03-14  David Zeuthen  <davidz@redhat.com>
+
+	* polkitd/PolicyKit.in: Change priorities from 90 10 to 98 02 to make
+	this work
+
+	* polkitd/PolicyKit.conf.in: Remove user="@POLKIT_USER@" bits as I'm
+	not sure we need a dedicated user
+
+	* configure.in: Cosmetic things
+
 2006-03-15  Kay Sievers  <kay.sievers@vrfy.org>
 
 	Add SUSE distro bits.
